--- a/shoes.html
+++ b/shoes.html
@@ -10,7 +10,7 @@
             background-color: #f4f4f4;
             margin: 0;
             padding: 20px;
-            background-color: beige;
+            background-color: #cacaca;
         }
         .container {
             max-width: 1200px;
@@ -42,7 +42,7 @@
             color: #555;
         }
         .add-to-cart {
-            background: #007bff;
+            background: black;
             color: white;
             border: none;
             padding: 10px;
