--- a/adidas.html
+++ b/adidas.html
@@ -114,6 +114,72 @@
             padding: 2px 5px;
             font-size: 12px;
         }
+        footer {
+    background-color: #000;
+    text-align: center;
+}
+
+.promo-banner {
+    background-color: #F7E146;
+    color: #000;
+    padding: 20px 0;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.promo-banner button {
+    background-color: #000;
+    color: #fff;
+    border: 2px solid #000;
+    padding: 10px 20px;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.footer-content {
+    display: flex;
+    justify-content: space-around;
+    padding: 40px 10%;
+    text-align: left;
+    flex-wrap: wrap;
+}
+
+.footer-column {
+    width: 15%;
+}
+
+.footer-column h3 {
+    font-size: 14px;
+    font-weight: bold;
+    margin-bottom: 15px;
+}
+
+.footer-column ul {
+    list-style: none;
+    padding: 0;
+}
+
+.footer-column ul li {
+    font-size: 13px;
+    margin-bottom: 8px;
+    cursor: pointer;
+}
+
+.footer-column ul li:hover {
+    text-decoration: underline;
+}
+
+.footer-column.social {
+    text-align: left;
+}
+
+.footer-bottom {
+    background-color: #1a1a1a;
+    padding: 15px 0;
+    font-size: 12px;
+    color: #ccc;
+}
     </style>
 </head>
 <body>
@@ -160,5 +226,73 @@
             <img src="superstar.jpg" alt="Adidas Superstar">
         </div>
     </div>
+     <footer>
+            <div class="promo-banner">
+                <p>JOIN ADIDAS AND GET 10% OFF</p>
+                <button>Sign Up for Free →</button>
+            </div>
+            <div class="footer-content">
+                <div class="footer-column">
+                    <h3>PRODUCTS</h3>
+                    <ul>
+                        <li>Footwear</li>
+                        <li>Clothing</li>
+                        <li>Accessories</li>
+                        <li>Outlet-Sale</li>
+                        <li>New Arrivals</li>
+                        <li>Flat 50% Off!</li>
+                    </ul>
+                </div>
+                <div class="footer-column">
+                    <h3>SPORTS</h3>
+                    <ul>
+                        <li>Cricket</li>
+                        <li>Running</li>
+                        <li>Football</li>
+                        <li>Gym/Training</li>
+                        <li>Tennis</li>
+                        <li>Outdoor</li>
+                    </ul>
+                </div>
+                <div class="footer-column">
+                    <h3>COLLECTIONS</h3>
+                    <ul>
+                        <li>Ultraboost</li>
+                        <li>Superstar</li>
+                        <li>NMD</li>
+                        <li>Stan Smith</li>
+                        <li>Predator</li>
+                    </ul>
+                </div>
+                <div class="footer-column">
+                    <h3>SUPPORT</h3>
+                    <ul>
+                        <li>Help</li>
+                        <li>Customer Service</li>
+                        <li>Returns & Exchanges</li>
+                        <li>Shipping</li>
+                        <li>Order Tracker</li>
+                    </ul>
+                </div>
+                <div class="footer-column">
+                    <h3>COMPANY INFO</h3>
+                    <ul>
+                        <li>About Us</li>
+                        <li>adidas Apps</li>
+                        <li>Entity Details</li>
+                        <li>Press</li>
+                        <li>Careers</li>
+                    </ul>
+                </div>
+                <div class="footer-column social">
+                    <h3>FOLLOW US</h3>
+                    <p>📷 Instagram</p>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>Privacy Policy | Terms and Conditions | Cookies</p>
+                <p>©2025 ATHLETIX India Marketing Pvt. Ltd</p>
+            </div>
+        </footer>
 </body>
 </html>
