--- a/shoes.html
+++ b/shoes.html
@@ -58,7 +58,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Sneaker Collection</h1>
+        <h1 style="font-family: Arial, Helvetica, sans-serif; font-size: 50px;">Sneaker Collection</h1>
         <div class="grid" id="product-list"></div>
     </div>
     <script>
