--- a/adidas.html
+++ b/adidas.html
@@ -191,7 +191,7 @@
         <a href="#">Log In</a>
     </div>
     <div class="logo">
-        <img src="adidas-logo.png" alt="Adidas Logo">
+        <img src="fav.jpeg" alt="Athletix">
     </div>
     <div class="nav-menu">
         <a href="#">Shoes</a>
@@ -215,16 +215,16 @@
         <img src="cart-icon.png" alt="Cart">
     </div>
 </div>
-    <div class="main-content">
-        <div class="text-content">
-            <h1>SUPERSTAR</h1>
-            <p>A streetwear staple, from the basketball court to the street.</p>
-            <a href="#">Shop Originals</a>
-            <a href="#">Shop Superstar</a>
-        </div>
-        <div class="image-content">
-            <img src="superstar.jpg" alt="Adidas Superstar">
-        </div>
+   <div class="main-content">
+    <div class="text-content">
+        <h1>SUPERSTAR</h1>
+        <p>A streetwear staple, from the basketball court to the street.</p>
+        <a href="#">Shop Originals</a>
+        <a href="#">Shop Superstar</a>
+    </div>
+    <div class="image-content">
+        <img src="logo.jpeg" width = "250px", height = "250px", alt="Athletix">
+    </div>
     </div>
      <footer>
             <div class="promo-banner">
