--- a/adidas.html
+++ b/adidas.html
@@ -115,71 +115,73 @@
             font-size: 12px;
         }
         footer {
-    background-color: #000;
-    text-align: center;
-}
+            background-color: #000;
+            text-align: center;
+        }
 
-.promo-banner {
-    background-color: #F7E146;
-    color: #000;
-    padding: 20px 0;
-    font-size: 18px;
-    font-weight: bold;
-}
+        .promo-banner {
+            background-color: #F7E146;
+            color: #000;
+            padding: 20px 0;
+            font-size: 18px;
+            font-weight: bold;
+        }
 
-.promo-banner button {
-    background-color: #000;
-    color: #fff;
-    border: 2px solid #000;
-    padding: 10px 20px;
-    cursor: pointer;
-    font-size: 16px;
-    font-weight: bold;
-}
+        .promo-banner button {
+            background-color: #000;
+            color: #fff;
+            border: 2px solid #000;
+            padding: 10px 20px;
+            cursor: pointer;
+            font-size: 16px;
+            font-weight: bold;
+        }
 
-.footer-content {
-    display: flex;
-    justify-content: space-around;
-    padding: 40px 10%;
-    text-align: left;
-    flex-wrap: wrap;
-}
+        .footer-content {
+            display: flex;
+            justify-content: space-around;
+            padding: 40px 10%;
+            text-align: left;
+            flex-wrap: wrap;
+            color: #ccc
+        }
 
-.footer-column {
-    width: 15%;
-}
+        .footer-column {
+            width: 15%;
+            color: #ccc
+        }
 
-.footer-column h3 {
-    font-size: 14px;
-    font-weight: bold;
-    margin-bottom: 15px;
-}
+        .footer-column h3 {
+            font-size: 14px;
+            font-weight: bold;
+            margin-bottom: 15px;
+        }
 
-.footer-column ul {
-    list-style: none;
-    padding: 0;
-}
+        .footer-column ul {
+            list-style: none;
+            padding: 0;
+        }
 
-.footer-column ul li {
-    font-size: 13px;
-    margin-bottom: 8px;
-    cursor: pointer;
-}
+        .footer-column ul li {
+            font-size: 13px;
+            margin-bottom: 8px;
+            cursor: pointer;
+        }
 
-.footer-column ul li:hover {
-    text-decoration: underline;
-}
+        .footer-column ul li:hover {
+            text-decoration: underline;
+        }
 
-.footer-column.social {
-    text-align: left;
-}
+        .footer-column.social {
+            text-align: left;
+        }
 
-.footer-bottom {
-    background-color: #1a1a1a;
-    padding: 15px 0;
-    font-size: 12px;
-    color: #ccc;
-}
+        .footer-bottom {
+            background-color: #1a1a1a;
+            padding: 15px 0;
+            font-size: 12px;
+            color: #ccc;
+        }
     </style>
 </head>
 <body>
