--- a/adidas.html
+++ b/adidas.html
@@ -230,7 +230,7 @@
     </div>
      <footer>
             <div class="promo-banner">
-                <p>JOIN ADIDAS AND GET 10% OFF</p>
+                <p>JOIN Athletix AND GET 10% OFF</p>
                 <button>Sign Up for Free →</button>
             </div>
             <div class="footer-content">
@@ -280,7 +280,7 @@
                     <h3>COMPANY INFO</h3>
                     <ul>
                         <li>About Us</li>
-                        <li>adidas Apps</li>
+                        <li>Athletix Apps</li>
                         <li>Entity Details</li>
                         <li>Press</li>
                         <li>Careers</li>
