Your commit message here

--- a/product1.htm
+++ b/product1.htm
@@ -260,7 +260,7 @@
 
     <div class="main">
         <div class="product-image">
-            <img src="product1.jpg" alt="Men's Running Shoes">
+            <img src="run.jpeg" alt="Men's Running Shoes">
         </div>
         <div class="product-details">
             <h1>Men's Running Shoes</h1>
