--- a/adidas.html
+++ b/adidas.html
@@ -126,6 +126,8 @@
             outline: none;
         }
 
+
+
         .icons {
             display: flex;
             align-items: center;
@@ -222,7 +224,6 @@
         <div class="help-signup">
             <a href="#">Help</a>
             <a href="#">Orders and Returns</a>
-            <a href="#">Sign Up</a>
             <a href="#">Log In</a>
         </div>
         <div class="logo">
@@ -261,6 +262,56 @@
             <img src="logo.jpeg" width="250px" , height="250px" , alt="Athletix">
         </div>
     </div>
+<div style="padding: 40px 10%; font-family: Arial, sans-serif;">
+    <h2 style="font-weight: bold;">Popular right now</h2>
+    <div style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 40px 20px; margin-top: 20px;">
+        <div>
+            <a href="/Clothing" style="text-decoration: none; color: black;">
+                <span style="font-weight: bold; font-size: 1.5em; border-bottom: 3px solid black;">Clothing</span>
+            </a>
+        </div>
+
+
+        <div>
+            <a href="/Shoes" style="text-decoration: none; color: black;">
+                <span style="font-weight: bold; font-size: 1.5em; border-bottom: 3px solid black;">Shoes</span>
+            </a>
+        </div>
+   
+        <div>
+            <a href="/Accessories" style="text-decoration: none; color: black;">
+                <span style="font-weight: bold; font-size: 1.5em; border-bottom: 3px solid black;">Accessories</span>
+            </a>
+        </div>
+    </div>
+</div>
+<div style="padding: 40px 10%; font-family: Arial, sans-serif;">
+    <h2 style="font-weight: bold; font-size: 24px; margin-bottom: 30px;">
+        SELECT YOUR SPORT, FIND YOUR GEAR, AND GET IN THE GAME!
+    </h2>
+    <div style="display: flex; flex-wrap: wrap; gap: 20px; justify-content: space-between;">
+        <a href="/cricket" style="text-align: center; text-decoration: none; color: black;">
+            <img src="images/cricket.jpg" alt="Cricket" style="width: 200px; height: 280px; object-fit: cover;">
+            <div style="margin-top: 10px; font-weight: bold; border-bottom: 2px solid black;">CRICKET</div>
+        </a>
+
+        <a href="/running" style="text-align: center; text-decoration: none; color: black;">
+            <img src="images/running.jpg" alt="Running" style="width: 200px; height: 280px; object-fit: cover;">
+            <div style="margin-top: 10px; font-weight: bold; border-bottom: 2px solid black;">RUNNING</div>
+        </a>
+
+
+        <a href="/football" style="text-align: center; text-decoration: none; color: black;">
+            <img src="images/football.jpg" alt="Football" style="width: 200px; height: 280px; object-fit: cover;">
+            <div style="margin-top: 10px; font-weight: bold; border-bottom: 2px solid black;">FOOTBALL</div>
+        </a>
+
+        <a href="/basketball" style="text-align: center; text-decoration: none; color: black;">
+            <img src="images/basketball.jpg" alt="Basketball" style="width: 200px; height: 280px; object-fit: cover;">
+            <div style="margin-top: 10px; font-weight: bold; border-bottom: 2px solid black;">BASKETBALL</div>
+        </a>
+    </div>
+</div>
     <footer>
         <div class="promo-banner">
             <p>JOIN Athletix AND GET 10% OFF</p>
@@ -283,10 +334,10 @@
                 <ul>
                     <li>Cricket</li>
                     <li>Running</li>
+                
                     <li>Football</li>
-                    <li>Gym/Training</li>
-                    <li>Tennis</li>
-                    <li>Outdoor</li>
+                  
+                    <li>Basketball</li>
                 </ul>
             </div>
             <div class="footer-column">
