--- a/adidas.html
+++ b/adidas.html
@@ -230,13 +230,10 @@
             <img src="fav.jpeg" alt="Athletix">
         </div>
         <div class="nav-menu">
-            <a href="#">Shoes</a>
             <a href="#">Men</a>
             <a href="#">Women</a>
             <a href="#">Kids</a>
-            <a href="#">Sports</a>
-            <a href="#">Lifestyle</a>
-            <a href="#">Outlet</a>
+            <a href="#">Shoes</a>
         </div>
         <div class="search-bar">
             <input type="text" placeholder="Search">
@@ -262,26 +259,26 @@
             <img src="logo.jpeg" width="250px" , height="250px" , alt="Athletix">
         </div>
     </div>
-<div style="padding: 40px 10%; font-family: Arial, sans-serif;">
-    <h2 style="font-weight: bold;">Popular right now</h2>
-    <div style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 40px 20px; margin-top: 20px;">
-        <div>
-            <a href="/Clothing" style="text-decoration: none; color: black;">
-                <span style="font-weight: bold; font-size: 1.5em; border-bottom: 3px solid black;">Clothing</span>
-            </a>
-        </div>
-
-
-        <div>
-            <a href="/Shoes" style="text-decoration: none; color: black;">
-                <span style="font-weight: bold; font-size: 1.5em; border-bottom: 3px solid black;">Shoes</span>
-            </a>
-        </div>
-   
-        <div>
-            <a href="/Accessories" style="text-decoration: none; color: black;">
-                <span style="font-weight: bold; font-size: 1.5em; border-bottom: 3px solid black;">Accessories</span>
-            </a>
+<div style="display: flex; justify-content: center; padding: 40px 0; font-family: Arial, sans-serif;">
+    <div style="max-width: 900px; text-align: center;">
+        <h2 style="font-weight: bold;">Popular right now</h2>
+        <div style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 40px 20px; margin-top: 20px;">
+            <div>
+                <a href="/Clothing" style="text-decoration: none; color: black;">
+                    <span style="font-weight: bold; font-size: 1.5em; border-bottom: 3px solid black;">Clothing</span>
+                </a>
+            </div>
+            <div>
+                <a href="/Shoes" style="text-decoration: none; color: black;">
+                    <span style="font-weight: bold; font-size: 1.5em; border-bottom: 3px solid black;">Shoes</span>
+                </a>
+            </div>
+            <div>
+                <a href="/Accessories" style="text-decoration: none; color: black;">
+                    <span
+                        style="font-weight: bold; font-size: 1.5em; border-bottom: 3px solid black;">Accessories</span>
+                </a>
+            </div>
         </div>
     </div>
 </div>
