--- a/shoe_detail_enhanced.html
+++ b/shoe_detail_enhanced.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head style="background-color: white;">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Nike Air Max 270</title>
@@ -10,13 +10,118 @@
       padding: 0;
       height: 100%;
       font-family: Arial, sans-serif;
-      background: #f2f2f2;
+      background: white;
+    }
+
+    .header {
+      background-color: #000;
+      color: #fff;
+      padding: 10px 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .header a {
+        color: #fff;
+        text-decoration: none;
+        margin: 0 10px;
+    }
+
+    .header a:hover {
+        text-decoration: underline;
+    } 
+
+    .header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            background-color: #000000;
+            padding: 10px 20px;
+            border-bottom: 1px solid #ccc;
+        }
+
+    .notification {
+        position: relative;
+    }
+
+    .notification-badge {
+        position: absolute;
+        top: -5px;
+        right: -5px;
+        background-color: yellow;
+        border-radius: 50%;
+        padding: 2px 5px;
+        font-size: 12px;
+    }
+
+    .help-signup {
+        display: flex;
+        gap: 15px;
+        font-size: 0.9em;
+    }
+
+    .help-signup a {
+        text-decoration: none;
+        color: #ffffff;
+    }
+
+    .help-signup a:hover {
+        text-decoration: underline;
+    }
+
+    .logo img {
+        height: 30px;
+    }
+
+    .nav-menu {
+        display: flex;
+        gap: 20px;
+    }
+
+    .nav-menu a {
+        text-decoration: none;
+        color: #ffffff;
+        font-weight: bold;
+    }
+
+    .search-bar {
+        display: flex;
+        align-items: center;
+        border: 1px solid #ccc;
+        padding: 5px;
+        border-radius: 5px;
+    }
+
+    .search-bar input {
+        border: none;
+        outline: none;
+    }
+
+    .icons {
+        display: flex;
+        align-items: center;
+        gap: 15px;
+    }
+
+    .notification {
+        position: relative;
+    }
+
+    .notification-badge {
+        position: absolute;
+        top: -5px;
+        right: -5px;
+        background-color: yellow;
+        border-radius: 50%;
+        padding: 2px 5px;
+        font-size: 12px;
     }
 
     .container {
       width: 100%;
       min-height: 100vh;
-      background: #fff;
+      background: white ;
       padding: 40px 5%;
       box-sizing: border-box;
       max-width: 1200px;
@@ -106,7 +211,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      border: 1px solid #ddd;
+      border: 1px solid black;
       border-radius: 5px;
       cursor: pointer;
       transition: all 0.3s ease;
@@ -217,10 +322,43 @@
       padding: 15px 0;
       font-size: 12px;
     }
+
+    
   </style>
 </head>
-<body>
-
+<body style="background-color: white;">
+  <div class="header">
+    <div class="help-signup">
+        <a href="#">Help</a>
+        <a href="#">Orders and Returns</a>
+        <a href="#">Log In</a>
+    </div>
+    <div class="logo">
+        <img src="fav.jpeg" alt="Athletix">
+    </div>
+    <div class="nav-menu">
+        <a href="#">Shoes</a>
+        <a href="#">Men</a>
+        <a href="#">Women</a>
+        <a href="#">Kids</a>
+        <a href="#">Sports</a>
+        <a href="#">Lifestyle</a>
+        <a href="#">Outlet</a>
+    </div>
+    <div class="search-bar">
+        <input type="text" placeholder="Search">
+        <img src="search-icon.png" alt="Search">
+    </div>
+    <div class="icons">
+        <div class="notification">
+            <img src="user-icon.png" alt="User Icon">
+            <div class="notification-badge">1</div>
+        </div>
+        <img src="favorites-icon.png" alt="Favorites">
+        <img src="cart-icon.png" alt="Cart">
+    </div>
+  </div>
+  
   <div class="container">
     <button class="back-btn" onclick="history.back()">← Back to Catalogue</button>
 
@@ -258,12 +396,7 @@
           <button class="add-to-bag" onclick="addToCart()">Add to Bag</button>
         </div>
 
-        <div class="reviews">
-          <h3>Customer Reviews</h3>
-          <div class="review">⭐️⭐️⭐️⭐️⭐️ "Most comfortable shoes I've ever worn!" - Sam</div>
-          <div class="review">⭐️⭐️⭐️⭐️ "Great for all-day wear and running." - Jordan</div>
-          <div class="review">⭐️⭐️⭐️⭐️⭐️ "Love the color and the bounce!" - Casey</div>
-        </div>
+        
       </div>
     </div>
   </div>
